# summer-initializr

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
src/: main.rs
src/resources/: application-test.yml  application.yml
test/hello/: Cargo.toml
test/hello/src/: main.rs
