[package]
name = "summer-initializr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"]}
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
bytes = "1.1.0"
